moreutils (0.51) UNRELEASED; urgency=low

  * Fix ifdata to build on OS X. Thanks, Peter Eisentraut
    Closes: #575294
  * use docbook-xsl for building man pages. Thanks, Peter Eisentraut
    for extensive patch set!
    Closes: #728831

 -- Joey Hess <joeyh@debian.org>  Mon, 04 Nov 2013 12:28:04 -0400

moreutils (0.50) unstable; urgency=low

  * Fix build on Hurd. Closes: #716653
    (Thanks, Pino Toscano)

 -- Joey Hess <joeyh@debian.org>  Mon, 26 Aug 2013 13:00:24 -0400

moreutils (0.49) unstable; urgency=low

  * ts: Fix timezone used with -i
  * errno, isutf8: Fix zero-termination of option list, which could lead
    to getopt crash. Closes: #715867
    (Thanks, Mayhem Team)

 -- Joey Hess <joeyh@debian.org>  Wed, 10 Jul 2013 16:21:41 -0400

moreutils (0.48) unstable; urgency=low

  * Allow overriding PREFIX and CFLAGS to make the build more flexible
    (Thanks, Ben Walton)
  * Typo. Closes: #697113
  * ts: -i enables incremental timestamping.
    Thanks, Thomas Vander Stichele
  * ts: Support single-digit day dates.
    Thanks, Peter Lunicks
  * sponge: Check fclose to detect certian short reads. Closes: #704453

 -- Joey Hess <joeyh@debian.org>  Sat, 04 May 2013 23:50:03 -0400

moreutils (0.47) unstable; urgency=low

  * errno: New utility that looks up errno numbers or names.

 -- Joey Hess <joeyh@debian.org>  Mon, 25 Jun 2012 16:31:17 -0400

moreutils (0.46) unstable; urgency=low

  * Typo. Closes: #649158
  * combine: Avoid reading files twice, to support data coming from
    pipes. Closes: #667960 Thanks, Carsten Hey

 -- Joey Hess <joeyh@debian.org>  Mon, 09 Apr 2012 16:19:34 -0400

moreutils (0.45) unstable; urgency=low

  * ts: Support %.s for seconds sinch epoch with subsecond resolution.
    Closes: #619764

 -- Joey Hess <joeyh@debian.org>  Sun, 19 Jun 2011 15:44:28 -0400

moreutils (0.44) unstable; urgency=low

  * pee: Propigate exit status of commands run.

 -- Joey Hess <joeyh@debian.org>  Thu, 10 Mar 2011 17:38:14 -0400
